--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  #pie chart
+  syncfusion_flutter_charts:
   #  Pull to refresh also used for pagination, refresh data
   pull_to_refresh:
   # store data purpose
