--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   #pie chart
+  #image
+  image_picker: ^0.8.2
+  #
   syncfusion_flutter_charts:
   #  Pull to refresh also used for pagination, refresh data
   pull_to_refresh:
