--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   #pie chart
   #image
-  image_picker: ^0.8.2
+  image_picker:
   #
   syncfusion_flutter_charts:
   #  Pull to refresh also used for pagination, refresh data
@@ -52,7 +52,7 @@ dependencies:
   #page transiction effects
   page_transition:
   #toast msg
-  fluttertoast: ^8.0.8
+  fluttertoast:
   equatable:
   #internet connection
   connectivity:
